--- a/MVC-BNG/Views/Shared/_Layout.cshtml
+++ b/MVC-BNG/Views/Shared/_Layout.cshtml
@@ -190,7 +190,7 @@
                 <div class="row">
 
                     <div class="col-xs-offset-2 col-sm-12" style="color:white">
-                        © Derechos Reservados Biblioteca Nacional de Guatemala "Luis Cardoza y Aragón" 2016  Intecap Centro Tics
+                        © Derechos Reservados Biblioteca Nacional de Guatemala "Luis Cardoza y Aragón" 2016 by Intecap Centro Tics
 
                     </div>
 
